Tue Oct 11 12:41:40 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Don't rm the awk and sed scripts during a make clean!

Fri Oct  7 15:37:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ct_c.sed: Add extra check to make sure blank lines get squeezed
		out.  Needed for AIX's sed, for some reason.

Thu Oct  6 19:40:09 1994  Theodore Y. Ts'o  (tytso@dcl)

	* mk_cmds.sh -- replace basename with sed -- more portable

Mon Oct  3 17:26:27 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in:
	  configure.in:  Don't try to compile mk_cmds.  Use awk/sed shell
	  	  script replacement instead.  It's more apt to be
		  portable, since it doesn't use lex or yacc.  :-(

Tue Aug 30 21:30:18 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* cmd_tbl.lex.l: Add declaration for strdup() if HAS_STRDUP is not
	defined. 

	* ct.y: Added #include of string.h; added declaration for
	strdup() if HAS_STRDUP is not defined.

Tue Jul 19 20:27:59 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: remove spurious includes rules

Wed Jul 13 23:20:44 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: nuke libss.a.bak crud

Sun Jul  3 07:48:43 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: changing things to now spew ignored errors.

Wed Jun 22 18:51:50 1994  Mark Eichin  (eichin@cygnus.com)

	* configure.in: ss_err.h is *not* a SrcHeader. Note that there is
	duplication between the Copy*Header lines and the includes: rule
	in the Makefile.in, which should later be fixed.

Tue Jun 21 00:21:05 1994  Tom Yu  (tlyu at dragons-lair)

	* configure.in: should be CopySrcHeader

Mon Jun 20 21:58:40 1994  Tom Yu  (tlyu at dragons-lair)

	* configure.in: install headers during build
